<resources>
    <string name="app_name">MyDash</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="please_enter_why_you_are_feeling_this_way_as_well_as_anything_else_you_want_to_record_about_today">Please enter why you are feeling this way, as well as anything else you want to record about today!</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="mood">Mood</string>
    <string name="notes">notes</string>
    <string name="warning_this_is_permanent">WARNING: This is permanent!</string>
    <string name="clears_all_history_from_your_dash">Clears all history from your dash.</string>
    <string name="clear_dash">Clear Dash</string>
    <string name="contact_us">Contact Us!</string>
    <string name="questions_concerns_get_in_touch_with_us">Questions? Concerns? Get in touch with us!</string>
    <string name="dash">Dash</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
</resources>
